--- a/index.html
+++ b/index.html
@@ -1,1 +1,146 @@
-<h1>My Portfolio</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Valentine Quiz 💖</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Arial', sans-serif;
+      background: linear-gradient(135deg, #ff5f9e, #ff9a9e);
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      text-align: center;
+    }
+
+    .card {
+      background: rgba(255, 255, 255, 0.15);
+      padding: 30px;
+      border-radius: 20px;
+      width: 90%;
+      max-width: 400px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+      animation: fadeIn 0.6s ease;
+    }
+
+    h1, h2 {
+      margin-bottom: 20px;
+    }
+
+    button {
+      width: 100%;
+      padding: 12px;
+      margin: 8px 0;
+      border: none;
+      border-radius: 12px;
+      font-size: 16px;
+      cursor: pointer;
+      background: white;
+      color: #ff5f9e;
+      font-weight: bold;
+      transition: 0.2s;
+    }
+
+    button:hover {
+      transform: scale(1.05);
+      background: #ffe3ec;
+    }
+
+    #final span {
+      opacity: 0;
+      display: inline-block;
+      transform: translateY(20px);
+      transition: 0.4s;
+      font-size: 1.8rem;
+    }
+
+    @keyframes fadeIn {
+      from {opacity: 0; transform: scale(0.95);}
+      to {opacity: 1; transform: scale(1);}
+    }
+  </style>
+</head>
+<body>
+
+  <div class="card" id="app"></div>
+
+  <script>
+    const app = document.getElementById("app");
+
+    const questions = [
+      {
+        q: "Are you male or female?",
+        a: ["Male", "Female"]
+      },
+      {
+        q: "Are you in a relationship?",
+        a: ["Yes", "No"]
+      },
+      {
+        q: "Are you in love?",
+        a: ["Yes", "No"]
+      },
+      {
+        q: "Do you love the person standing in front of you?",
+        a: ["Yes", "No"]
+      }
+    ];
+
+    let step = 0;
+    let answers = [];
+
+    function renderQuestion() {
+      const q = questions[step];
+      app.innerHTML = `
+        <h2>${q.q}</h2>
+        ${q.a.map(ans => `<button onclick="answer('${ans}')">${ans}</button>`).join("")}
+      `;
+    }
+
+    function answer(ans) {
+      answers.push(ans);
+      step++;
+
+      if (step < questions.length) {
+        renderQuestion();
+      } else {
+        showCalculating();
+      }
+    }
+
+    function showCalculating() {
+      app.innerHTML = `
+        <h2>Calculating results...</h2>
+        <p>Analyzing emotional data 💘</p>
+      `;
+
+      setTimeout(showFinal, 2000);
+    }
+
+    function showFinal() {
+      const text = "Will you be my Valentine?";
+      app.innerHTML = `
+        <div id="final">
+          ${text.split("").map(l => `<span>${l === " " ? "&nbsp;" : l}</span>`).join("")}
+        </div>
+      `;
+
+      const letters = document.querySelectorAll("#final span");
+      letters.forEach((l, i) => {
+        setTimeout(() => {
+          l.style.opacity = 1;
+          l.style.transform = "translateY(0)";
+        }, i * 120);
+      });
+    }
+
+    renderQuestion();
+  </script>
+
+</body>
+</html>
