--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Valentine Quiz 💖</title>
+  <title>Dream House Giveaway 🏡</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
     body {
       margin: 0;
       font-family: 'Arial', sans-serif;
-      background: linear-gradient(135deg, #ff5f9e, #ff9a9e);
+      background: linear-gradient(135deg, #1e3c72, #2a5298);
       height: 100vh;
       display: flex;
       align-items: center;
@@ -21,16 +21,22 @@
 
     .card {
       background: rgba(255, 255, 255, 0.15);
-      padding: 30px;
+      padding: 25px;
       border-radius: 20px;
       width: 90%;
-      max-width: 400px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+      max-width: 420px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
       animation: fadeIn 0.6s ease;
     }
 
+    img {
+      width: 100%;
+      border-radius: 12px;
+      margin: 15px 0;
+    }
+
     h1, h2 {
-      margin-bottom: 20px;
+      margin-bottom: 15px;
     }
 
     button {
@@ -42,14 +48,14 @@
       font-size: 16px;
       cursor: pointer;
       background: white;
-      color: #ff5f9e;
+      color: #2a5298;
       font-weight: bold;
       transition: 0.2s;
     }
 
     button:hover {
       transform: scale(1.05);
-      background: #ffe3ec;
+      background: #e3ecff;
     }
 
     #final span {
@@ -87,6 +93,17 @@
   <script>
     const app = document.getElementById("app");
 
+    // ---------- INTRO ----------
+    function showIntro() {
+      app.innerHTML = `
+        <h1>WIN THIS HOUSE IN MONTENEGRO 🇲🇪</h1>
+        <p>Enter our international property raffle</p>
+        <img src="https://montenegrovillas.com/themes/montenegrovillas/assets/images/og-image.jpg">
+        <button onclick="startRaffle()">Start Raffle Entry</button>
+      `;
+    }
+
+    // ---------- QUESTIONS ----------
     const questions = [
       { q: "Are you male or female?", a: ["Male", "Female"] },
       { q: "Are you in a relationship?", a: ["Yes", "No"] },
@@ -95,6 +112,11 @@
     ];
 
     let step = 0;
+
+    function startRaffle() {
+      step = 0;
+      renderQuestion();
+    }
 
     function renderQuestion() {
       const q = questions[step];
@@ -113,14 +135,16 @@
       }
     }
 
+    // ---------- CALCULATING ----------
     function showCalculating() {
       app.innerHTML = `
-        <h2>Calculating results...</h2>
-        <p>Analyzing emotional data 💘</p>
+        <h2>Processing raffle entry...</h2>
+        <p>Running eligibility checks 🏡</p>
       `;
       setTimeout(showFinal, 2000);
     }
 
+    // ---------- FINAL VALENTINE ----------
     function showFinal() {
       const text = "Will you be my Valentine?";
       app.innerHTML = `
@@ -141,27 +165,30 @@
         }, i * 120);
       });
 
-      // Show buttons after animation
       setTimeout(() => {
         document.getElementById("buttons").style.display = "block";
       }, letters.length * 120 + 500);
     }
 
     function yes() {
-      app.innerHTML = `<h1>YAY!! 💕🥰</h1><p>You just made me the happiest person ever!</p>`;
+      app.innerHTML = `
+        <h1>YOU SAID YES!! 💕</h1>
+        <p>No house... but you won my heart 😌</p>
+      `;
       launchConfetti();
     }
 
     function no() {
       app.innerHTML = `
-        <h2>Wrong answer 😤</h2>
-        <p>Try again...</p>
-        <button onclick="showFinal()">Okay fine 😅</button>
+        <h2>Raffle disqualified 😤</h2>
+        <p>Incorrect answer detected.</p>
+        <button onclick="showFinal()">Try again</button>
       `;
     }
 
+    // ---------- CONFETTI ----------
     function launchConfetti() {
-      for (let i = 0; i < 120; i++) {
+      for (let i = 0; i < 150; i++) {
         const c = document.createElement("div");
         c.className = "confetti";
         c.style.left = Math.random() * 100 + "vw";
@@ -172,7 +199,7 @@
       }
     }
 
-    renderQuestion();
+    showIntro();
   </script>
 
 </body>
