Update final question text in index.html

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
     // ---------- FINAL VALENTINE ----------
     function showFinal() {
-      const text = "Final Question... Will you be Andi's Valentine?";
+      const text = "Finally... Will you be Andi's Valentine?";
       app.innerHTML = `
         <div id="final">
           ${text.split("").map(l => `<span>${l === " " ? "&nbsp;" : l}</span>`).join("")}
